<resources>
    <string name="app_name">demokotlinbottomsheet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_dashboard">Dashboard</string>
    <string name="fragment_lead_generation">Lead Generation</string>
    <string name="fragment_lead_list">Lead List</string>
    <!--lead generation fragment-->
    <string name="customer_name">Enter customer name</string>
    <string name="contact_number">Enter contact number</string>
    <string name="project_name">Enter project name</string>
    <string name="flat_details">Enter flat details</string>
    <string name="property_cost">Enter property cost</string>
    <string name="loan_requirement">Enter loan amount</string>
    <string name="state">Enter state</string>
    <string name="city">Enter city</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="preview">Preview</string>
</resources>