<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.LeadGenerationFragment">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_custName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/customer_name"
        app:layout_constraintTop_toTopOf="parent"
        android:inputType="text"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_contNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contact_number"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/edt_custName"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_projectName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/project_name"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/edt_contNumber"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_flatDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/flat_details"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/edt_projectName"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_propertyCost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/property_cost"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/edt_flatDetails"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_loanRequirement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/loan_requirement"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/edt_propertyCost"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/state"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/edt_loanRequirement"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/city"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/edt_state"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgv_imagePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintTop_toBottomOf="@+id/edt_city"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_addData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>